fix minor UI issues related to dark mode and mobile experience

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,7 @@
 
 body {
   display: block;
+  background-color: white;
 }
 
 a,
@@ -21,7 +22,7 @@ a,
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: #dde8f3;
   }
 }
 
